# util

./: .gitignore  CLAUDE.md  LICENSE  README.md  clip-html-to-markdown  clip-md-to-html  count-files-by-subdir  count-files-by-subdir2  dupmanager  pyproject.toml  screenshot_workday_courses.py  test_chapter_vs_verse.py  test_extract_verses.py  test_sqlite_extraction.py  test_verse_parsing.py
src/: bible_book_abbreviations.json  extract_usfm.py  preprocess_usfm_to_sqlite.py  usfm_processor.py  validate_proclaim.py
