[project]
name = "util"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml==5.2.2",
    "pandas>=2.3.0",
    "playwright>=1.55.0",
    "rich>=14.0.0",
    "streamlit>=1.46.1",
    "usfm-grammar>=3.1.2",
]

[project.scripts]
validate_proclaim = "validate_proclaim:main"
extract_usfm = "extract_usfm:main"
extract_verses = "usfm_processor:main"
preprocess_usfm = "preprocess_usfm_to_sqlite:main"
